fixup: wrong realignment with #2211

--- a/app/assets/stylesheets/global-styles/icons.scss
+++ b/app/assets/stylesheets/global-styles/icons.scss
@@ -51,54 +51,8 @@
   font-smoothing: antialiased;
 }
 
-.icon-acidified-hcl:before { content: "\f10a"; }
-.icon-c-nmr:before { content: "\f116"; }
-.icon-dried:before { content: "\f115"; }
-.icon-ea:before { content: "\f117"; }
-.icon-ei:before { content: "\f118"; }
-.icon-gpx-a:before { content: "\f10c"; }
-.icon-gpx-b:before { content: "\f10d"; }
-.icon-h-nmr:before { content: "\f119"; }
-.icon-hand-stop:before { content: "\f105"; }
-.icon-hr:before { content: "\f11a"; }
-.icon-hr1:before { content: "\f11e"; }
-.icon-hr2:before { content: "\f11f"; }
-.icon-ir:before { content: "\f11b"; }
-.icon-isolated:before { content: "\f10e"; }
-.icon-polymer:before { content: "\f104"; }
-.icon-reaction:before { content: "\f100"; }
-.icon-reaction-procedure:before { content: "\f107"; }
-.icon-residue-adsorbed:before { content: "\f10f"; }
-.icon-residue-dissolved:before { content: "\f110"; }
-.icon-residue-purified:before { content: "\f111"; }
-.icon-resin-solvent:before { content: "\f108"; }
-.icon-resin-solvent-reagent:before { content: "\f109"; }
-.icon-sample:before { content: "\f101"; }
-.icon-cell_line:before { content: "\f102"; }
-.icon-vessel:before { content: "\f1fb"; }
-.icon-screen:before { content: "\f103"; }
-.icon-tlc-control:before { content: "\f112"; }
-.icon-uv:before { content: "\f11c"; }
-.icon-washed-nahco3:before { content: "\f113"; }
-.icon-water-free:before { content: "\f106"; }
-.icon-wellplate:before { content: "\f102"; }
-
-.icon-xvial:before {
-  display: inline-block;
-  font-family: "chemstrap-icons";
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  line-height: 1;
-  text-decoration: inherit;
-  text-rendering: optimizeLegibility;
-  text-transform: none;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased;
-}
-
 // glyph codes
+
 .icon-incoming:before {
   content: "\e820";
 } /* '' */
